--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
 h1{
     color: blue;
+    text-align: center;
+}
+h3{
+    color: green;
+    font-style: italic;
+    text-align: center;
+}
+p{
+    font-family: sans-serif;
+}
+ol{
+    line-height: 40px;
 }
