--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,17 @@ h3{
 }
 p{
     font-family: sans-serif;
+    font-size: medium;
 }
 ol{
     line-height: 40px;
+}
+ul{
+    line-height: 42px;
+}
+body{
+    background-color: blueviolet;
+    text-align: left;
+    font-style: oblique;
+    color: black;
 }
